# GeneVariantFetcher

./: .env.example  .gitignore  .pre-commit-config.yaml  .replit  1  AGENTS.md  ARCHITECTURE.md  AUDIT_REPORT.md  BRCA2.db  CHANGELOG.md  CLAUDE.md  CODEX.md  CODEX_TASK.md  CODEX_TASKS.md  CONTRIBUTING.md  FIX_SUMMARY.md  HARVESTER_QUICKSTART.md  LICENSE  Makefile  NEXT_STEPS.md  PREVIOUS_PROGRESS.md  PUBMIND_README.md  README.md  README_HARVEST.md  README_PIPELINE.md  REFACTORING_PLAN.md  SIMPLE_USAGE_GUIDE.md  SQLITE_MIGRATION_GUIDE.md  STATUS.md  STATUS_CHECK.md  TASKS.md  TESTING_PROMPT.md  TEST_RESULTS.md  THINGS_CLAUDE_WAS_DOING_BEFORE_RATE_LIMIT_REACHED.txt  TRIAGE_README.md  TTR.db  TTR_pmids.txt  app.py  automated_workflow.py  browser_fetch.py  (+59 more)
.claude/: .fuse_hidden00118a0e0000037f
attached_assets/: Pasted-You-are-a-biomedical-text-extraction-engine-that-reads-scientific-literature-and-outputs-highly-stru-1763562166199_1763562166200.txt
benchmarks/: README.md
cli/: __init__.py  __main__.py  audit_paywalls.py  automated_workflow.py  browser_fetch.py  clinical_data_triage.py  collect_literature.py  compare_variants.py  dashboard.py  discover.py  extract.py  fetch_manager.py  gvf_run.py  institutional_preflight.py  reharvest.py  rename_downloads.py  scout.py
comparison_results/: blind_pmid_diagnosis.md  discrepancies.csv  gold_standard_pmids.txt  missing_in_excel.csv  missing_in_sqlite.csv  phase4_diagnosis.md  report.md  summary.json  tier2_recovered_gold_pmids.txt
config/: cardiac_gene_synonyms.json  constants.py  gene_config.py  settings.py  test_settings.py
data/: README.md  kcnh2_variant_aliases.json
docs/: API_KEYS.md  ARCHITECTURE.md  AUTONOMY_ROADMAP.md  CONSOLIDATION_COMPLETED.md  CONSOLIDATION_PLAN.md  CONSOLIDATION_PROMPT.md  CONSOLIDATION_SUMMARY.md  COVERAGE_IMPROVEMENT_PLAN.md  CURRENT_RECALL_STATUS_2026-05-20.md  DOWNLOAD_PROTOCOL.md  END_TO_END_RECALL_RUN.md  EXTRACT_TTR_CSV_README.md  GVF_architecture.md  IMPLEMENTATION_NOTES.md  NEW_GENE_RUNBOOK.md  NEXT_STEPS.md  NON_PMC_DOWNLOAD_STRATEGY.md  OUTPUT_FORMAT.md  PROTOCOL_CHANGELOG.md  PROTOCOL_COST_EVAL.md  QUICKSTART.md  RECALL_ANALYSIS_2026-02-01.md  RECALL_HISTORY.md  RECALL_REFRESH_RUNBOOK.md  RECALL_STATUS.md  REFRACTORING_PLAN.md  SIMPLE_USAGE_GUIDE.md  SQLITE_MIGRATION_GUIDE.md  SUPPLEMENT_ACQUISITION_PLAN.md  SUPPLEMENT_AUDIT.md  TESTING.md  VALIDATION.md  VARIANT_BROWSER_INTEGRATION.md  manifest-schema.md  vanderbilt_api_access.md  vanderbilt_institutional_guide.md
gene_literature/: __init__.py  bioc_client.py  clinical_data_triage.py  collect_literature.py  collector.py  discovery.py  disease_context.py  europepmc_handler.py  europepmc_integration.py  llm_relevance.py  pubmed_client.py  pubmind_fetcher.py  relevance_checker.py  rename_downloads.py  synonym_finder.py  synonym_relevance_checker.py  unpaywall.py  writer.py
gene_variant_fetcher_gold_standard/: README.md  manifest.json
golden_test_set/: golden_test_spec.json
gui/: README.md  __init__.py  checkpoint.py  models.py  requirements.txt  server.py  worker.py
gvf/: preprocessor.py
harvesting/: __init__.py  abstracts.py  artifacts_log.py  browser_automation.py  browser_supplement_fetcher.py  content_validation.py  core_api.py  doi_resolver.py  elsevier_api.py  figure_extractor.py  figure_text_extractor.py  figure_variant_reader.py  format_converters.py  free_text_fetch_service.py  free_text_flow.py  free_text_output_service.py  html_body_fetcher.py  migrate_to_sqlite.py  oa_recovery.py  orchestrator.py  paywall_context_enrichment.py  persistence.py  pmc_api.py  pmc_pow.py  pmc_supp_harvest.py  priority_queue.py  publisher_strategy.py  rerun_aggregate_helper.py  retry_manager.py  scholar_pdf_fallback.py  springer_api.py  supplement_fold.py  supplement_processing_service.py  supplement_reference_parser.py  supplement_scraper.py  unpaywall_api.py  vandy_access.py  wiley_api.py
pipeline/: __init__.py  abstract_extraction.py  aggregation.py  carrier_guard.py  (+31 more)
(+4910 files in other folders)
