[project]
name = "genevariantfetcher"
version = "2.1.0"
description = "A collection of Python tools for extracting genetic variant data, patient-level information, and full-text articles from PubMed literature"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "biopython>=1.86",
    "litellm>=1.30.0",
    "markitdown[pdf,docx]>=0.1.3",  # Include pdfminer.six for PDF and python-docx for DOCX support
    "pdfplumber>=0.11.0",  # Fallback PDF extraction (better table detection)
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "pydantic>=2.13,<3",  # <3 cap: settings rely on v2 Field/validation_alias behavior
    "pydantic-settings>=2.14",
    "pymupdf>=1.24.0",
    "rapidfuzz>=3.0.0",  # deterministic fuzzy variant matching in the recall scorer
    "xlrd>=2.0.1",
    "openpyxl>=3.1.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "tabulate>=0.9.0",
    "tenacity>=9.1.2",
    "typer>=0.9.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40.0",
    "browser-cookie3>=0.19.0",  # read browser cookies for authenticated paywall fetches
]
# Stealth backend for Cloudflare-fronted publishers (Wiley etc.) when EZproxy
# isn't available. Patched-Playwright drop-in; run `patchright install chromium`.
# Clears the CF managed challenge only with real Chrome, headful (see
# fetch_paywalled.py --stealth and docs/RECALL_REFRESH_RUNBOOK.md).
stealth = [
    "patchright>=1.40.0",
]
# Optional direct Anthropic SDK for gene_literature.llm_relevance; the main LLM
# path goes through litellm, so this is only needed for that opt-in relevance check.
relevance = [
    "anthropic>=0.25.0",
]
# Optional YAML variant-mapping files for cli.compare_variants (JSON mappings
# work without it).
mapping = [
    "PyYAML>=6.0",
]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.6",
    "mypy>=1.5.0",
]

[project.scripts]
gvf = "cli:app"

[tool.setuptools.packages.find]
include = ["pipeline*", "harvesting*", "config*", "utils*", "gene_literature*", "cli*"]
exclude = ["test_*", "automated_output*"]
